syntax = "proto3";

import "google/protobuf/empty.proto";

package registerPackage;


message Address {
    int32 CEP = 1;
    int32 number = 2;
    string additionalInformation = 3;       
    int32 addresTypeId = 4;
}

message RegisterCostumerRequest {    
    string name = 2;
    string email = 3;
    string password = 4;
    Address address = 5;
    optional string pictureUri = 6;
}

message Costumer {
    int32 id = 1;
    string name = 2;
    string email = 3;
    string password = 4;
    Address address = 5;
    optional string pictureUri = 6;   
}

service RegisterService {
    rpc registerCostumer(RegisterCostumerRequest) returns (Costumer);
}

